--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Fruit Ninja Mobile + Farcade</title>
+    <title>Fruit Ninja Mobile </title>
     <style>
       html,
       body {
